# Reaperv1.0

./: .env  .env.example  .gitignore  README.md  USAGE.md  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  schema.sql
.github/workflows/: ping.yml
.next/: BUILD_ID  build-manifest.json  fallback-build-manifest.json  prerender-manifest.json  required-server-files.js  required-server-files.json  trace  trace-build
.next/cache/: .tsbuildinfo  config.json
.next/server/: middleware-manifest.json  server-reference-manifest.js  server-reference-manifest.json
.next/server/app/: _global-error.rsc  _not-found.html  _not-found.rsc  index.html  page_client-reference-manifest.js
.next/server/app/_global-error.segments/: __PAGE__.segment.rsc  _head.segment.rsc  _index.segment.rsc  _tree.segment.rsc
.next/server/app/_not-found/: page_client-reference-manifest.js
.next/server/app/_not-found.segments/: _head.segment.rsc  _index.segment.rsc  _tree.segment.rsc
.next/server/app/index.segments/: __PAGE__.segment.rsc  _full.segment.rsc  _head.segment.rsc  _index.segment.rsc  _tree.segment.rsc
.next/server/chunks/ssr/: _de4e25a4._.js  _de4e25a4._.js.map  app_layout_tsx_271801d7._.js  app_layout_tsx_271801d7._.js.map
.next/server/middleware/: middleware-manifest.json
.next/server/pages/: 500.html
.next/static/chunks/: 8102fd723e65061c.css
app/: layout.tsx  page.tsx
app/dashboard/: AreaChart.tsx  MonitorCard.tsx  RefreshButton.tsx  page.tsx
reaper/: cli.py  database.py  harvester.py
scripts/: pinger.ts
types/: database.ts
(+3 files in other folders)
