[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reaper"
version = "0.1.0"
description = "CLI tool for Reddit market research"
requires-python = ">=3.8"
dependencies = [
    "praw>=7.7.0",
]

[project.scripts]
reaper = "reaper.cli:main"
